--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <nav>Global template</nav>
-  {% block global %}{% endblock global %}
+  <div>Home</div>
+  {% block home %}{% endblock home %}
 </body>
 </html>
