updates, add README

--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
   <table class="table-auto border">
-    <caption class="text-center text-4xl text-red-400 font-bold my-10">☠️ don't flix ☠️</caption>
+    <caption class="text-center text-4xl text-red-400 font-bold my-10"><a href="{% url 'homepage' %}">☠️ don't flix ☠️</a></caption>
     <thead class="border">
       <tr>
         <th class="border text-center w-40 text-red-400">Title</th>
