--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,6 +5,9 @@
     <div>
       <a href="{% url 'movies_index' %}" class="text-center text-4xl text-red-400 font-bold my-10">☠️ don't flix ☠️</a>
     </div>
+    <div>
+      <small class="text-center text-gray-400"><em>get your linux isos</em></small>
+    </div>
     <div class="sm:w-4/5 md:w-3/5 lg:w-2/5  mt-10 px-10">
       <img src="{% static 'movies/img/city.gif' %}" alt="city gif">
     </div>
